--- a/package.json
+++ b/package.json
@@ -9,10 +9,17 @@
     "@testing-library/user-event": "^12.1.10",
     "bs-css-emotion": "^4.0.1",
     "bs-platform": "8.4.2",
+    "bs-storybook": "^1.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "@storybook/addon-actions": "6.2.9",
+    "@storybook/addon-essentials": "6.2.9",
+    "@storybook/addon-links": "6.2.9",
+    "@storybook/node-logger": "6.2.9",
+    "@storybook/preset-create-react-app": "3.1.7",
+    "@storybook/react": "6.2.9"
   },
   "scripts": {
     "res:watch": "bsb -make-world -w",
